Hide the normal image edit controls when the AI editing tools are shown. Ensure we don't add extra spacing when our tools are hidden

--- a/src/experiments/image-generation/index.scss
+++ b/src/experiments/image-generation/index.scss
@@ -76,7 +76,6 @@
 }
 
 .ai-media-library-editor {
-	border-bottom: 1px solid #ddd;
 	padding: 0 0 15px;
 	max-width: 950px;
 	min-width: 600px;
